# plotting

./: .gitignore  2d_plots.html  3d_plots.html  404.html  CHANGELOG.md  Cargo.toml  README.md  index.html  introduction.html  page_2.html  print.html  searcher-c2a407aa.js  searchindex-279825de.js  searchindex.js  toc-4156c92c.js  toc.html  toc.js
.github/workflows/: pull_request.yml  weekly.yml
book/: book.toml
book/src/: 2d_plots.md  3d_plots.md  SUMMARY.md  introduction.md
book/src/figures/: general_2d_plot.html  general_3d_plot.html  quick_plot_2d.html  quick_plot_3d.html  quick_plot_3d_with_labels.html
book/src/plot_2d/: general_2d_plotting.md  quick_2d_plot.md  quick_2d_plot_with_labels.md
book/src/plot_3d/: general_3d_plotting.md  quick_3d_plot.md  quick_3d_plot_with_labels.md
book/theme/: head.hbs
examples/: general_2d_plot.rs  general_3d_plot.rs  quick_plot_2d.rs  quick_plot_2d_with_labels.rs  quick_plot_3d.rs  quick_plot_3d_with_labels.rs  run_all.rs
figures/: general_3d_plot.html  quick_plot_2d.html  quick_plot_2d_with_labels.html  quick_plot_3d.html  quick_plot_3d_with_labels.html
plot_2d/: general_2d_plotting.html  quick_2d_plot.html  quick_2d_plot_with_labels.html
plot_3d/: general_3d_plotting.html  quick_3d_plot.html  quick_3d_plot_with_labels.html
src/: colors.rs  figure.rs  format.rs  lib.rs  line_style.rs  plot.rs  quick.rs  trace.rs
