[package]
name = "plotting"
version = "0.1.0"
authors = ["Tamas Kis"]
edition = "2024"
description = "Plotting."
documentation = "https://docs.rs/plotting"
repository = "https://github.com/tamaskis/plotting"
license = "MIT OR Apache-2.0"

exclude = [".gitignore", ".github/", ".vscode/", "Cargo.lock", "book/"]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "src/docs-header.html" ]

[dependencies]
derive_builder = "0.20.2"
file-io = "0.1.7"
plotly = "0.13.1"
